<resources>
    <string name="app_name">Tracktor</string>
    <string name="timeLabel">Время:</string>
    <string name="distanceLabel">Расстояние:</string>
    <string name="average_speed_label">Средняя скорость:</string>
    <string name="start">Старт</string>
    <string name="end">Конец</string>
    <string name="stop">Стоп</string>
    <string name="statistic">Статистика</string>
    <string name="share">Поделиться</string>
    <string name="settings">Настройки</string>
    <string name="stopRoute">Закончить маршрут</string>
    <string name="route_active">Маршрут активен!</string>
    <string name="permissions_denied">Вы не дали разрешения!</string>
    <string name="dont_stay">Не стойте на месте!</string>

    <string name="menu_item_about">О приложении</string>
    <string name="title_activity_preference">Настройки</string>
    <string name="title_distance_unit">Единица измерения</string>
    <string name="dialog_title_distance_unit">Выберите единицу измерения</string>
    <string name="title_auto_shutdown">Автоотключение</string>
    <string name="dialog_title_auto_shutdown">Выберите время автоотключения</string>
    <string name="dialog_title_compression">Выберите качество изображения, %</string>
    <string name="title_user_weight">Вес пользователя, кг</string>
    <string name="dialog_title_user_weight">Вес пользователя, кг</string>
    <string name="title_user_gender">Пол пользователя</string>
    <string name="dialog_title_user_gender">Пол пользователя</string>

    <string name="title_user_height">Рост пользователяб, см</string>
    <string name="dialog_title_user_height">Рост пользователя, см</string>
    <string name="title_user_age">Возвраст пользователя</string>
    <string name="dialog_title_user_age">Возвраст пользователя</string>
    <string name="title_compression_image">Качество изображения, %</string>

    <string name="title_map_category">Карта</string>
    <string name="title_start_of_road_marker">Маркер начала маршрута</string>
    <string name="dialog_title_start_marker">Выберите цвет маркера начала маршрута</string>
    <string name="title_end_of_road_marker">Марке конца маршрута</string>
    <string name="dialog_title_end_marker">Выберите цвет маркера конца маршрута</string>
    <string name="title_color_of_road_line">Цвет линии маршрута</string>
    <string name="dialog_title_color_line">Выберите цвет маршрута</string>
    <string name="title_width_of_road_line">Ширина линии маршрута</string>
    <string name="dialog_title_width_line">Выберите ширину линии маршрута</string>


    <string name="title_user_category">О пользователе</string>
    <string name="title_tracktor_category">Приложение</string>

    <string name="pref_key_unit">unit</string>
    <string name="pref_key_shutdown">shutdown</string>
    <string name="pref_key_compression">compression</string>
    <string name="pref_key_start_marker">start_marker</string>
    <string name="pref_key_end_marker">end_marker</string>
    <string name="pref_key_width_line">width_line</string>
    <string name="pref_key_color_line">color_line</string>
    <string name="pref_key_weight">weight</string>
    <string name="pref_key_height">height</string>
    <string name="pref_key_gender">gender</string>
    <string name="pref_key_age">age</string>

    <string name="pref_default_value_unit">3</string>
    <string name="pref_default_value_shutdown">-1</string>
    <string name="pref_default_value_compression">100</string>
    <string name="pref_default_value_weight">60</string>
    <string name="pref_default_value_height">170</string>
    <string name="pref_default_value_age">18</string>
    <string name="pref_default_value_gender">-1</string>
    <string name="pref_default_value_start_marker">60</string>
    <string name="pref_default_value_end_marker">300</string>
    <string name="pref_default_value_width_line">10</string>
    <string name="pref_default_value_color_line">#FF000000</string>

    <string name="btn_delete_result">Удалить</string>

    <string name="permissions_request_title">Внимание!</string>
    <string name="permissions_request_message">Для корректной работы приложения необходим доступ к местоположению. Для сохранения скриншотов необходим доступ к внешнему хранилищу</string>
    <string name="ok">Понятно</string>
    <string name="back_off">Приложение не может работать без доступа к местоположению</string>
    <string name="notify_info">Время: %s\nРасстояние: %s "</string>
    <string name="calories_spent">Потрачено каллорий:</string>
    <string name="action_type">Вид активности:</string>
    <string name="dateLabel">Дата:</string>
    <string name="comment">Комментарий</string>
    <string name="save">Сохранить</string>
    <string name="cancel">Отмена</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_comment">Введите комментарий</string>
    <string name="here_is_empty">Тут пусто...</string>

    <string name="order_ask">По возрастанию</string>
    <string name="order_desk">По убыванию</string>

    <string name="sort_date">По дате</string>
    <string name="sort_duration">По времени</string>
    <string name="sort_distance">По дистанции</string>
</resources>
