<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/recycler"
        android:name="com.elegion.tracktor.results.ResultsFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.results.ResultsFragment"
        tools:listitem="@layout/li_track"
        android:visibility="gone"/>

    <include
        android:id="@+id/stubView"
        layout="@layout/stub_layout"
        android:visibility="gone" />

</LinearLayout>
